--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Program to relay quantum information
+<title> Program to relay quantum information</title>
 </head>
 <body>
 <p>
